package icl.io;

message RSBImage {
    required uint32 width    = 1;
    required uint32 height   = 2;
    required uint32 channels = 3;
    required uint32 roix     = 4;
    required uint32 roiy     = 5;
    required uint32 roiw     = 6;
    required uint32 roih     = 7;

    enum Format {
      formatGray = 0;
      formatRGB = 1;
      formatHLS = 2;
      formatYUV = 3;
      formatLAB = 4;
      formatChroma = 5;
      formatMatrix = 6;
    }
    required Format format   = 8;


    enum Depth {
      depth8u = 0;
      depth16s = 1;
      depth32s = 2;
      depth32f = 3;
      depth64f = 4;
    }
    required Depth depth     = 9;

    required int64 time      = 10;

    required string compressionMode = 11;
    required string compressionQuality = 12;

    required bytes data = 13;

    optional string metadata = 14;
};
